Open new tab footer edit

--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
 
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://in.linkedin.com/in/neelesh-kasukurthi-a537101aa">LinkedIn</a>
-    <a class="footer-link" href="https://mobile.twitter.com/neeleshkasukur2">Twitter</a>
-    <a class="footer-link" href="https://www.instagram.com/neeleshk_0908/?hl=en">Instagram</a>
+    <a class="footer-link" href="https://in.linkedin.com/in/neelesh-kasukurthi-a537101aa" target="_blank">LinkedIn</a>
+    <a class="footer-link" href="https://mobile.twitter.com/neeleshkasukur2" target="_blank">Twitter</a>
+    <a class="footer-link" href="https://www.instagram.com/neeleshk_0908/?hl=en" target="_blank">Instagram</a>
     <a class="footer-link"
-      href="https://www.facebook.com/Memories-for-the-decade-111535590571300/?hc_ref=ARTNFjw9kCcWaAbAp5NNUr6vRiZAQbUoC4gQKId1w46mDepx8jvdzJ5Ri17djXWp8Ms&__xts__[0]=68.ARCmIPYiOWET_eQvlmBAEkVpGaqfCwDE64aGweDPRW148ijPhzEnQdqW1JKbG3FVKibdNa-cGLsMdVIK3bjwKjjOQ8qzZstrlddCuXz30_FEpXa-xmNxs9LsTjkFyLmhfPy30K0XgSKs3l6ZdGksZGshO0tIyLp_pqHI9QUoNGxWVfB83jHxktO8SD9H-VgFmUFEfi8_D7mYgHbLJZNJd4BJu0ms-CIDSr-1JElYN8eaEgU_482iKsfAW3kvIQ6M1SZL0qUrXwceOtgqnrABvidSnJvkRQGP3SvY7nKAEY3CS6yJk2g3sFYOliC98w&__tn__=kC-R">Facebook</a>
-    <a class="footer-link" href="https://www.tripoto.com/profile/neeleshkasukurthi">Tripoto</a>
+      href="https://www.facebook.com/Memories-for-the-decade-111535590571300/?hc_ref=ARTNFjw9kCcWaAbAp5NNUr6vRiZAQbUoC4gQKId1w46mDepx8jvdzJ5Ri17djXWp8Ms&__xts__[0]=68.ARCmIPYiOWET_eQvlmBAEkVpGaqfCwDE64aGweDPRW148ijPhzEnQdqW1JKbG3FVKibdNa-cGLsMdVIK3bjwKjjOQ8qzZstrlddCuXz30_FEpXa-xmNxs9LsTjkFyLmhfPy30K0XgSKs3l6ZdGksZGshO0tIyLp_pqHI9QUoNGxWVfB83jHxktO8SD9H-VgFmUFEfi8_D7mYgHbLJZNJd4BJu0ms-CIDSr-1JElYN8eaEgU_482iKsfAW3kvIQ6M1SZL0qUrXwceOtgqnrABvidSnJvkRQGP3SvY7nKAEY3CS6yJk2g3sFYOliC98w&__tn__=kC-R" target="_blank">Facebook</a>
+    <a class="footer-link" href="https://www.tripoto.com/profile/neeleshkasukurthi" target="_blank">Tripoto</a>
     <p class="copy"> © 2020 Neelesh Kasukurthi.</p>
   </div>
 
