--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
       <div class="skill-row2">
         <h4>Full Stack Web Developer</h4>
-        <img class="web" src="" alt="">
+        <img class="web" src="pexels-pok-rie-305086.jpg" alt="" height="10%" width="10%">
         <p>I have been working with few of my relatives company websites in the past but nothing actually got posted to the actual hosting but I have made this Website which somewhat near to what I have learnt so far and also I have a Freelanceing
           way of doing it for you.<br>
           Just go this website signup for free and place order for creating your websites in some Stunning ways.
