--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
       <div class="skill-row3">
         <h4>Photographer</h4>
-        <img class="photo" src="pexels-pok-rie-305086.jpg" alt="">
+        <img class="photocss" src="pexels-pok-rie-305086.jpg" alt="">
         <p>I have been taking few of the photographes from my phone and also I have been hosting my images into an instagram page.
         </p>
       </div>
