--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       I'm Neelesh Kasukurthi.
     </h1>
     <h3>
-      <spam class="stack">Full Stack Web Developer</spam> and <spam class="data">DataBase Analyst</spam> and <spam class="photo">Photographer</spam>
+      <spam class="stack">Full Stack Web Developer</spam> and <spam class="data">DataBase Analyst</spam> and <spam class="photocss">Photographer</spam>
     </h3>
     <img class="cloud2" src="cloud.png" alt="cloud-img">
     <img class="mount" src="mountain.png" alt="mountain-img">
@@ -56,7 +56,7 @@
       </div>
       <div class="skill-row3">
         <h4>Photographer</h4>
-        <img class="photocss" src="pexels-pok-rie-305086.jpg" alt="">
+        <img class="photo" src="pexels-pok-rie-305086.jpg" alt="">
         <p>I have been taking few of the photographes from my phone and also I have been hosting my images into an instagram page.
         </p>
       </div>
