--- a/index.html
+++ b/index.html
@@ -73,6 +73,13 @@
     </div>
   </div>
 
+  
+  
+   <a href='https://freehitcounters.org/'>https://freehitcounters.org</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=79634ffa3a1ceb4b72de7c211b3953df6f5e707a'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/739853/t/0"></script>
+  
+  
+  
 
   <div class="bottom-container">
     <a class="footer-link" href="https://in.linkedin.com/in/neelesh-kasukurthi-a537101aa" target="_blank">LinkedIn</a>
