--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       I'm Neelesh Kasukurthi.
     </h1>
     <h3>
-      <spam class="stack">Full Stack Web Developer</spam> and <spam class="data">DataBase Analyst</spam> and <spam class="photocss">Photographer</spam>
+      <spam class="stack">A Web Developer</spam> and <spam class="data">DataBase Analyst</spam> and <spam class="photocss">Photographer</spam>
     </h3>
     <img class="cloud2" src="cloud.png" alt="cloud-img">
     <img class="mount" src="mountain.png" alt="mountain-img">
@@ -46,7 +46,7 @@
           situated at Mira road Mumbai India. I have helped them to analyze crucial data egarding the recent pandimic {i.e. Coron or Covid19}.</p>
       </div>
       <div class="skill-row2">
-        <h4>Full Stack Web Developer</h4>
+        <h4>Web Developer</h4>
         <img class="web" src="webdevploment.png" alt="">
         <p>I have been working with few of my own works in the past but nothing actually got posted to the actual hosting but I have made this Website which somewhat near to what I have learnt so far and also I have a Freelanceing
           way of doing it for you.<br>
@@ -71,15 +71,7 @@
           Email Id: memoriesforthedecade@gmail.com <br>
       </div>
     </div>
-  </div>
-
-  
-  
-   <a href='https://freehitcounters.org/'>https://freehitcounters.org</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=79634ffa3a1ceb4b72de7c211b3953df6f5e707a'></script>
-<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/739853/t/0"></script>
-  
-  
-  
+  </div> 
 
   <div class="bottom-container">
     <a class="footer-link" href="https://in.linkedin.com/in/neelesh-kasukurthi-a537101aa" target="_blank">LinkedIn</a>
