--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
   <link rel="icon" href="undraw_files_6b3d.svg">
+  <script>var continuallySettings = { appID: "wg9yq4mz7r4j" };</script>
+<script src="https://cdn-app.continual.ly/js/embed/continually-embed.latest.min.js"></script>
 </head>
 
 <body>
