--- a/index.html
+++ b/index.html
@@ -49,10 +49,8 @@
       <div class="skill-row2">
         <h4>Web Developer</h4>
         <img class="web" src="webdevploment.png" alt="">
-        <p>I have been working with few of my own works in the past but nothing actually got posted to the actual hosting but I have made this Website which somewhat near to what I have learnt so far and also I have a Freelanceing
-          way of doing it for you.<br>
-          Just go this website signup for free and place order for creating your websites in some Stunning ways.
-          <a herf="https://t.co/N5boXLGEJq?amp=1"> Click Here </a>
+        <p>I have been working with few of my own works in the past but nothing actually got posted to the actual hosting but I have made this Website which somewhat near to what I have learnt so far and also I have worked with <a herf="https://oneworldlearners.com">Oneworldlearners</a> as an inter FOR Technical Business Analyst (HTML Developer).
+          <a herf="https://neeleshkasukurthi.github.io/Agriculture-GURU/"> Click Here </a>
         </p>
       </div>
       <div class="skill-row3">
