--- a/index.html
+++ b/index.html
@@ -43,14 +43,13 @@
       <div class="skill-row1">
         <h4>Tableau</h4>
         <img class="tableau" src="tableau.png" alt="">
-        <p>I have been working with this software Called <spam class="ta">Tableau</spam> for analysing data for a Hospital called <spam class="bh">Bhaktivedanta Hospital & Research Institute</spam>
+        <p>I have been working with this software Called <spam class="ta">Tableau</spam> for Business Intelligence Developer (Tableau). for a Hospital called <spam class="bh">Bhaktivedanta Hospital & Research Institute</spam>
           situated at Mira road Mumbai India. I have helped them to analyze crucial data egarding the recent pandimic {i.e. Coron or Covid19}.</p>
       </div>
       <div class="skill-row2">
         <h4>Web Developer</h4>
         <img class="web" src="webdevploment.png" alt="">
         <p>I have been working with few of my own works in the past but nothing actually got posted to the actual hosting but I have made this Website which somewhat near to what I have learnt so far and also I have worked with <a href="https://oneworldlearners.com">Oneworldlearners</a> as an inter FOR Technical Business Analyst (HTML Developer).
-          <a herf="https://neeleshkasukurthi.github.io/Agriculture-GURU/"> Click Here </a>
         </p>
       </div>
       <div class="skill-row3">
