removing second Cloud

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h3>
       <spam class="stack">A Web Developer</spam> and <spam class="data">DataBase Analyst</spam> and <spam class="photocss">Photographer</spam>
     </h3>
-    <img class="cloud2" src="cloud.png" alt="cloud-img">
+<!--    <img class="cloud2" src="cloud.png" alt="cloud-img"> -->
     <img class="mount" src="mountain.png" alt="mountain-img">
   </div>
 
